--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <section class="color-background">
     <div class="game">
       <h1 class="game__title">Color Matching</h1>
-      <p class="game__timer"></p>
+      <p class="game__timer">30s</p>
       <div class="game__button-wrapper">
         <button class="game__button">Play Again</button>
       </div>
